--- a/index.html
+++ b/index.html
@@ -54,6 +54,27 @@
       color: #f44336;
       display: none;
     }
+    .token-list {
+      margin-top: 20px;
+      text-align: left;
+    }
+    .token-item {
+      background: #333;
+      padding: 10px;
+      border-radius: 5px;
+      margin: 5px 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .delete-button {
+      background: #f44336;
+      border: none;
+      color: white;
+      padding: 5px 10px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
@@ -64,7 +85,6 @@
     <button class="button" onclick="handleRegister()">Registrar</button>
     <p class="error-message" id="registerError">Usuário já registrado!</p>
     <p>Já tem uma conta? <a href="#" onclick="showLogin()">Faça login</a></p>
-    <p style="color: #fdd835;">Ainda em manutenção...</p>
   </div>
 
   <div id="loginPage" class="container" style="display: none;">
@@ -74,6 +94,14 @@
     <button class="button" onclick="handleLogin()">Entrar</button>
     <p class="error-message" id="loginError">Email ou senha incorretos!</p>
     <p>Não tem conta? <a href="#" onclick="showRegister()">Cadastre-se</a></p>
+  </div>
+
+  <div id="dashboard" class="container" style="display: none;">
+    <h2>Armazenamento de Tokens</h2>
+    <input type="text" id="tokenInput" class="input" placeholder="Cole seu token aqui" />
+    <button class="button" onclick="addToken()">Adicionar Token</button>
+    <div class="token-list" id="tokenList"></div>
+    <button class="button" onclick="logout()">Sair</button>
   </div>
 
   <script>
@@ -86,7 +114,7 @@
         document.getElementById("registerError").style.display = "block";
         return;
       }
-      users.push({ email, password });
+      users.push({ email, password, tokens: [] });
       localStorage.setItem("users", JSON.stringify(users));
       showLogin();
     }
@@ -100,7 +128,7 @@
       
       if (user) {
         localStorage.setItem("user", JSON.stringify(user));
-        alert("Login bem-sucedido!");
+        showDashboard();
       } else {
         document.getElementById("loginError").style.display = "block";
       }
@@ -109,11 +137,75 @@
     function showRegister() {
       document.getElementById("registerPage").style.display = "block";
       document.getElementById("loginPage").style.display = "none";
+      document.getElementById("dashboard").style.display = "none";
     }
+
     function showLogin() {
       document.getElementById("registerPage").style.display = "none";
       document.getElementById("loginPage").style.display = "block";
+      document.getElementById("dashboard").style.display = "none";
+    }
+
+    function showDashboard() {
+      document.getElementById("registerPage").style.display = "none";
+      document.getElementById("loginPage").style.display = "none";
+      document.getElementById("dashboard").style.display = "block";
+      loadTokens();
+    }
+
+    function addToken() {
+      let user = JSON.parse(localStorage.getItem("user"));
+      let users = JSON.parse(localStorage.getItem("users")) || [];
+      let token = document.getElementById("tokenInput").value.trim();
+
+      if (!token) return alert("Insira um token válido!");
+
+      let userIndex = users.findIndex(u => u.email === user.email);
+      if (userIndex === -1) return;
+
+      if (users[userIndex].tokens.length >= 10) {
+        return alert("Você pode armazenar no máximo 10 tokens!");
+      }
+
+      users[userIndex].tokens.push(token);
+      localStorage.setItem("users", JSON.stringify(users));
+      localStorage.setItem("user", JSON.stringify(users[userIndex]));
+      loadTokens();
+    }
+
+    function removeToken(index) {
+      let user = JSON.parse(localStorage.getItem("user"));
+      let users = JSON.parse(localStorage.getItem("users")) || [];
+
+      let userIndex = users.findIndex(u => u.email === user.email);
+      if (userIndex === -1) return;
+
+      users[userIndex].tokens.splice(index, 1);
+      localStorage.setItem("users", JSON.stringify(users));
+      localStorage.setItem("user", JSON.stringify(users[userIndex]));
+      loadTokens();
+    }
+
+    function loadTokens() {
+      let user = JSON.parse(localStorage.getItem("user"));
+      let tokenList = document.getElementById("tokenList");
+      tokenList.innerHTML = "";
+
+      user.tokens.forEach((token, index) => {
+        tokenList.innerHTML += `
+          <div class="token-item">
+            <span>${token}</span>
+            <button class="delete-button" onclick="removeToken(${index})">Remover</button>
+          </div>
+        `;
+      });
+    }
+
+    function logout() {
+      localStorage.removeItem("user");
+      showLogin();
     }
   </script>
 </body>
 </html>
+
