--- a/index.html
+++ b/index.html
@@ -54,27 +54,6 @@
       color: #f44336;
       display: none;
     }
-    .token-list {
-      margin-top: 20px;
-      text-align: left;
-    }
-    .token-item {
-      background: #333;
-      padding: 10px;
-      border-radius: 5px;
-      margin: 5px 0;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .delete-button {
-      background: #f44336;
-      border: none;
-      color: white;
-      padding: 5px 10px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
   </style>
 </head>
 <body>
@@ -98,9 +77,6 @@
 
   <div id="dashboard" class="container" style="display: none;">
     <h2>Painel</h2>
-    <input type="text" id="tokenInput" class="input" placeholder="Cole seu token aqui" />
-    <button class="button" onclick="addToken()">Salvar Token</button>
-    <div class="token-list" id="tokenList"></div>
     <button class="button" onclick="logout()">Sair</button>
   </div>
 
@@ -113,7 +89,7 @@
         document.getElementById("registerError").style.display = "block";
         return;
       }
-      users.push({ email, password, tokens: [] });
+      users.push({ email, password });
       localStorage.setItem("users", JSON.stringify(users));
       showLogin();
     }
@@ -131,45 +107,22 @@
       }
     }
 
-    function addToken() {
-      let user = JSON.parse(localStorage.getItem("user"));
-      let users = JSON.parse(localStorage.getItem("users")) || [];
-      let token = document.getElementById("tokenInput").value.trim();
-      if (!token) return alert("Insira um token válido!");
-      let userIndex = users.findIndex(u => u.email === user.email);
-      if (users[userIndex].tokens.length >= 3) {
-        return alert("Você pode armazenar no máximo 3 tokens!");
-      }
-      users[userIndex].tokens.push(token);
-      localStorage.setItem("users", JSON.stringify(users));
-      localStorage.setItem("user", JSON.stringify(users[userIndex]));
-      loadTokens();
+    function showRegister() {
+      document.getElementById("registerPage").style.display = "block";
+      document.getElementById("loginPage").style.display = "none";
+      document.getElementById("dashboard").style.display = "none";
     }
 
-    function removeToken(index) {
-      let user = JSON.parse(localStorage.getItem("user"));
-      let users = JSON.parse(localStorage.getItem("users")) || [];
-      let userIndex = users.findIndex(u => u.email === user.email);
-      users[userIndex].tokens.splice(index, 1);
-      localStorage.setItem("users", JSON.stringify(users));
-      localStorage.setItem("user", JSON.stringify(users[userIndex]));
-      loadTokens();
-    }
-
-    function loadTokens() {
-      let user = JSON.parse(localStorage.getItem("user"));
-      let tokenList = document.getElementById("tokenList");
-      tokenList.innerHTML = "";
-      user.tokens.forEach((token, index) => {
-        tokenList.innerHTML += `<div class="token-item"><span>${token}</span><button class="delete-button" onclick="removeToken(${index})">Remover</button></div>`;
-      });
+    function showLogin() {
+      document.getElementById("registerPage").style.display = "none";
+      document.getElementById("loginPage").style.display = "block";
+      document.getElementById("dashboard").style.display = "none";
     }
 
     function showDashboard() {
       document.getElementById("registerPage").style.display = "none";
       document.getElementById("loginPage").style.display = "none";
       document.getElementById("dashboard").style.display = "block";
-      loadTokens();
     }
 
     function logout() {
