--- a/index.html
+++ b/index.html
@@ -115,9 +115,12 @@
       }
 
       let users = JSON.parse(localStorage.getItem("users")) || [];
-      let user = users.find(user => user.email === email && user.password === password);
+      console.log("Usuários salvos:", users);
 
+      let user = users.find(user => user.email === email && user.password === password);
+      
       if (user) {
+        alert("Login bem-sucedido!");
         showDashboard();
         clearInputs(['email', 'password']);
       } else {
