--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div id="dashboard" class="container" style="display: none;">
     <h2>Painel</h2>
     <p>Bem-vindo, <span id="userName"></span></p>
-
+    <p><a href="hospedagem.html">Só irei hospedar Bot</a></p>
     <!-- Comentários -->
     <h3>Comentários</h3>
     <textarea id="commentInput" class="input" placeholder="Escreva um comentário..."></textarea>
