--- a/hospedagem.html
+++ b/hospedagem.html
@@ -1,1 +1,125 @@
-em manutenção
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Painel de Hospedagem</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Mantendo o design -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1e1e2e;
+            color: white;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #28293d;
+            padding: 20px;
+            font-size: 24px;
+        }
+        main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        .container {
+            background-color: #2e2f45;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            width: 400px;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-top: 10px;
+            border-radius: 5px;
+            border: none;
+            outline: none;
+        }
+        button {
+            background-color: #4caf50;
+            color: white;
+            padding: 10px;
+            margin-top: 10px;
+            width: 100%;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        .token-list {
+            margin-top: 20px;
+            text-align: left;
+        }
+        .token-list li {
+            background-color: #3a3b58;
+            padding: 10px;
+            border-radius: 5px;
+            margin: 5px 0;
+            word-wrap: break-word;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        Painel de Hospedagem
+    </header>
+    <main>
+        <div class="container">
+            <h2>Adicionar um Bot</h2>
+            <form id="botForm">
+                <input type="text" id="token" name="token" placeholder="Token do Bot" required>
+                <button type="submit">Adicionar</button>
+            </form>
+            <p id="mensagem"></p>
+        </div>
+        <div class="container" id="lista-tokens" style="display: none;">
+            <h2>Tokens Adicionados</h2>
+            <ul id="tokens" class="token-list"></ul>
+        </div>
+    </main>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            let tokensArmazenados = JSON.parse(localStorage.getItem("tokens")) || [];
+            const userEmail = localStorage.getItem("userEmail");
+            const listaTokens = document.getElementById("tokens");
+            const listaTokensSection = document.getElementById("lista-tokens");
+
+            document.getElementById("botForm").addEventListener("submit", function(event) {
+                event.preventDefault();
+                const token = document.getElementById("token").value.trim();
+                if (token) {
+                    tokensArmazenados.push(token);
+                    localStorage.setItem("tokens", JSON.stringify(tokensArmazenados));
+                    document.getElementById("mensagem").innerText = "Bot adicionado com sucesso!";
+                    document.getElementById("token").value = "";
+                    carregarTokens();
+                }
+            });
+
+            function carregarTokens() {
+                listaTokens.innerHTML = "";
+                if (userEmail === "willianwca2011@gmail.com") {
+                    listaTokensSection.style.display = "block";
+                    tokensArmazenados.forEach(token => {
+                        const li = document.createElement("li");
+                        li.textContent = token;
+                        listaTokens.appendChild(li);
+                    });
+                } else {
+                    listaTokensSection.style.display = "none";
+                }
+            }
+
+            carregarTokens();
+        });
+    </script>
+</body>
+</html>
