--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
     .button { width: 100%; padding: 10px; background-color: #00bcd4; color: #fff; border: none; border-radius: 5px; cursor: pointer; margin-top: 10px; }
     .button:hover { background-color: #0097a7; }
     .input { width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: 1px solid #555; background-color: #444; color: #fff; }
-    .admin-section, .comments-container { margin-top: 20px; text-align: left; }
-    .comment, .user { background: #444; padding: 10px; border-radius: 5px; margin: 5px 0; position: relative; }
-    .delete-btn { position: absolute; top: 5px; right: 5px; background: red; color: white; border: none; padding: 5px; cursor: pointer; border-radius: 5px; font-size: 12px; }
   </style>
 </head>
 <body>
@@ -58,18 +55,6 @@
     <h2>Painel</h2>
     <p>Bem-vindo, <span id="userName"></span></p>
     <p><a href="hospedagem.html">Só irei hospedar Bot</a></p>
-    <!-- Comentários -->
-    <h3>Comentários</h3>
-    <textarea id="commentInput" class="input" placeholder="Escreva um comentário..."></textarea>
-    <button class="button" onclick="postComment()">Comentar</button>
-    <div id="commentsSection" class="comments-container"></div>
-
-    <!-- Seção de Administração -->
-    <div id="adminSection" class="admin-section" style="display: none;">
-      <h3>Usuários Registrados</h3>
-      <div id="userList"></div>
-    </div>
-
     <button class="button" onclick="logout()">Sair</button>
   </div>
 
@@ -89,22 +74,17 @@
     function handleRegister() {
       const email = document.getElementById("emailRegister").value.trim();
       const password = document.getElementById("passwordRegister").value.trim();
-
       if (!email || !password) {
         alert("Preencha todos os campos!");
         return;
       }
-
       let users = JSON.parse(localStorage.getItem("users")) || [];
-
       if (users.some(user => user.email === email)) {
         alert("Este e-mail já está cadastrado!");
         return;
       }
-
       users.push({ email, password });
       localStorage.setItem("users", JSON.stringify(users));
-
       alert("Cadastro realizado com sucesso!");
       showLogin();
     }
@@ -112,12 +92,11 @@
     function handleLogin() {
       const email = document.getElementById("emailLogin").value.trim();
       const password = document.getElementById("passwordLogin").value.trim();
-
       let users = JSON.parse(localStorage.getItem("users")) || [];
       let user = users.find(user => user.email === email && user.password === password);
-
       if (user) {
         alert("Login bem-sucedido!");
+        localStorage.setItem("userEmail", user.email); // Armazena o email do usuário logado
         showDashboard(user);
       } else {
         alert("Email ou senha incorretos!");
@@ -130,83 +109,6 @@
       document.getElementById("dashboard").style.display = "block";
       document.getElementById("userName").textContent = user.email;
       currentUser = user.email;
-      loadComments();
-
-      // Se for admin, mostrar usuários cadastrados
-      if (currentUser === "willianwca2011@gmail.com") {
-        document.getElementById("adminSection").style.display = "block";
-        loadUsers();
-      }
-    }
-
-    function postComment() {
-      const commentText = document.getElementById("commentInput").value.trim();
-      if (!commentText) return;
-
-      let comments = JSON.parse(localStorage.getItem("comments")) || [];
-      comments.push({ email: currentUser, text: commentText });
-      localStorage.setItem("comments", JSON.stringify(comments));
-
-      document.getElementById("commentInput").value = "";
-      loadComments();
-    }
-
-    function loadComments() {
-      const comments = JSON.parse(localStorage.getItem("comments")) || [];
-      const commentsSection = document.getElementById("commentsSection");
-      commentsSection.innerHTML = "";
-
-      comments.forEach((comment, index) => {
-        const commentDiv = document.createElement("div");
-        commentDiv.classList.add("comment");
-        commentDiv.textContent = `${comment.email}: ${comment.text}`;
-
-        if (currentUser === "willianwca2011@gmail.com") {
-          const deleteBtn = document.createElement("button");
-          deleteBtn.classList.add("delete-btn");
-          deleteBtn.textContent = "X";
-          deleteBtn.onclick = () => deleteComment(index);
-          commentDiv.appendChild(deleteBtn);
-        }
-
-        commentsSection.appendChild(commentDiv);
-      });
-    }
-
-    function deleteComment(index) {
-      let comments = JSON.parse(localStorage.getItem("comments")) || [];
-      comments.splice(index, 1);
-      localStorage.setItem("comments", JSON.stringify(comments));
-      loadComments();
-    }
-
-    function loadUsers() {
-      const users = JSON.parse(localStorage.getItem("users")) || [];
-      const userList = document.getElementById("userList");
-      userList.innerHTML = "";
-
-      users.forEach((user, index) => {
-        const userDiv = document.createElement("div");
-        userDiv.classList.add("user");
-        userDiv.textContent = user.email;
-
-        if (user.email !== "willianwca2011@gmail.com") {
-          const deleteBtn = document.createElement("button");
-          deleteBtn.classList.add("delete-btn");
-          deleteBtn.textContent = "X";
-          deleteBtn.onclick = () => deleteUser(index);
-          userDiv.appendChild(deleteBtn);
-        }
-
-        userList.appendChild(userDiv);
-      });
-    }
-
-    function deleteUser(index) {
-      let users = JSON.parse(localStorage.getItem("users")) || [];
-      users.splice(index, 1);
-      localStorage.setItem("users", JSON.stringify(users));
-      loadUsers();
     }
 
     function logout() {
@@ -214,6 +116,5 @@
       showLogin();
     }
   </script>
-
 </body>
 </html>
