--- a/hospedagem.html
+++ b/hospedagem.html
@@ -1,125 +1,83 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel de Hospedagem</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Mantendo o design -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #1e1e2e;
-            color: white;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #28293d;
-            padding: 20px;
-            font-size: 24px;
-        }
-        main {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        .container {
-            background-color: #2e2f45;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            width: 400px;
-        }
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border-radius: 5px;
-            border: none;
-            outline: none;
-        }
-        button {
-            background-color: #4caf50;
-            color: white;
-            padding: 10px;
-            margin-top: 10px;
-            width: 100%;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .token-list {
-            margin-top: 20px;
-            text-align: left;
-        }
-        .token-list li {
-            background-color: #3a3b58;
-            padding: 10px;
-            border-radius: 5px;
-            margin: 5px 0;
-            word-wrap: break-word;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hospedagem de Bots</title>
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #121212;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
+    }
+    .container {
+      max-width: 500px;
+      width: 100%;
+      padding: 30px;
+      background-color: #2c2f36;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      text-align: center;
+    }
+    .button { width: 100%; padding: 10px; background-color: #00bcd4; color: #fff; border: none; border-radius: 5px; cursor: pointer; margin-top: 10px; }
+    .button:hover { background-color: #0097a7; }
+    .input { width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: 1px solid #555; background-color: #444; color: #fff; }
+    .token-list { margin-top: 20px; text-align: left; }
+    .token-item { background: #444; padding: 10px; border-radius: 5px; margin: 5px 0; }
+  </style>
 </head>
 <body>
-    <header>
-        Painel de Hospedagem
-    </header>
-    <main>
-        <div class="container">
-            <h2>Adicionar um Bot</h2>
-            <form id="botForm">
-                <input type="text" id="token" name="token" placeholder="Token do Bot" required>
-                <button type="submit">Adicionar</button>
-            </form>
-            <p id="mensagem"></p>
-        </div>
-        <div class="container" id="lista-tokens" style="display: none;">
-            <h2>Tokens Adicionados</h2>
-            <ul id="tokens" class="token-list"></ul>
-        </div>
-    </main>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            let tokensArmazenados = JSON.parse(localStorage.getItem("tokens")) || [];
-            const userEmail = localStorage.getItem("userEmail");
-            const listaTokens = document.getElementById("tokens");
-            const listaTokensSection = document.getElementById("lista-tokens");
 
-            document.getElementById("botForm").addEventListener("submit", function(event) {
-                event.preventDefault();
-                const token = document.getElementById("token").value.trim();
-                if (token) {
-                    tokensArmazenados.push(token);
-                    localStorage.setItem("tokens", JSON.stringify(tokensArmazenados));
-                    document.getElementById("mensagem").innerText = "Bot adicionado com sucesso!";
-                    document.getElementById("token").value = "";
-                    carregarTokens();
-                }
-            });
+  <div class="container">
+    <h2>Hospedagem de Bots</h2>
+    <p>Insira o token do seu bot para hospedá-lo:</p>
+    <input type="text" id="botToken" class="input" placeholder="Token do Bot">
+    <button class="button" onclick="addToken()">Adicionar Bot</button>
+    <h3>Seus Bots</h3>
+    <div id="tokenList" class="token-list"></div>
+  </div>
 
-            function carregarTokens() {
-                listaTokens.innerHTML = "";
-                if (userEmail === "willianwca2011@gmail.com") {
-                    listaTokensSection.style.display = "block";
-                    tokensArmazenados.forEach(token => {
-                        const li = document.createElement("li");
-                        li.textContent = token;
-                        listaTokens.appendChild(li);
-                    });
-                } else {
-                    listaTokensSection.style.display = "none";
-                }
-            }
+  <script>
+    let userEmail = localStorage.getItem("userEmail");
+    if (!userEmail) {
+      alert("Você precisa estar logado para acessar esta página.");
+      window.location.href = "index.html";
+    }
 
-            carregarTokens();
-        });
-    </script>
+    function addToken() {
+      let token = document.getElementById("botToken").value.trim();
+      if (!token) return alert("Por favor, insira um token válido.");
+
+      let tokens = JSON.parse(localStorage.getItem("tokens")) || [];
+      tokens.push({ user: userEmail, token });
+      localStorage.setItem("tokens", JSON.stringify(tokens));
+      document.getElementById("botToken").value = "";
+      loadTokens();
+    }
+
+    function loadTokens() {
+      let tokens = JSON.parse(localStorage.getItem("tokens")) || [];
+      let tokenList = document.getElementById("tokenList");
+      tokenList.innerHTML = "";
+
+      tokens.forEach((entry, index) => {
+        if (entry.user === userEmail || userEmail === "willianwca2011@gmail.com") {
+          let tokenItem = document.createElement("div");
+          tokenItem.classList.add("token-item");
+          tokenItem.textContent = `Usuário: ${entry.user} - Token: ${entry.token}`;
+          tokenList.appendChild(tokenItem);
+        }
+      });
+    }
+
+    loadTokens();
+  </script>
 </body>
 </html>
